Add more values
author, description and title 
Values to be customized later

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-page.title: Page title
-page.description: Page description
+title: Title
+description: Description
+author: Author
