Modified values for title, description, author

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: Title
-description: Description
-author: Author
+title: Robin ALEXANDER
+description: Welcome to my homepage
+author: robin.alexander@netplus.ch
