--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Robin ALEXANDER
-description: Welcome to my homepage
+description: Head of IT | Leadership | Operations | Transformation 
 author: robin.alexander@netplus.ch
